Modified devise functionality to work better
ADD: Notification when the token for password change fails
Now, when an user tries to change his password with an outdated
token, a warning is shown with a button to request a new token.

MODIFY: Added error indicators and requirements to devise views
Added error indicators using devise, indications and Bootstrap classes.
Also, the required fields has been marked to be required by the
browser before the send.

ADD: Title to every page
Added the title of every section to be shown in layouts.

ADD: Devise particular JavaScript
To avoid loading too much unnecesary code when the application
main JS file starts to grown.

--- a/config/locales/devise/en.yml
+++ b/config/locales/devise/en.yml
@@ -1,23 +1,30 @@
 en:
   devise:
-    login:
-      email_placeholder: "E-mail"
-      password_placeholder: "Password"
-      remember_me: "Remember me (for 2 weeks)"
-      log_in: "Log in"
-      forgot_password: "Forgot your password?"
+    session:
+      new:
+        title: "Log into your account"
+        email_placeholder: "E-mail"
+        password_placeholder: "Password"
+        remember_me: "Remember me (for 2 weeks)"
+        log_in: "Log in"
+        forgot_password: "Forgot your password?"
     password:
       new:
-        text: "If you've forgotten your account's password, give us your e-mail address and we'll send you an e-mail with instructions to change it."
+        title: "Request a new password"
+        text: "If you've forgotten your password, give us your e-mail address and we'll send you a mail with instructions to change it."
         email_placeholder: "E-mail"
         send_email: "Send me an e-mail"
         back_login: "Back to login"
       edit:
+        title: "Request a new password"
         text: "To set a new password for your account, type the password twice in the fields below."
         password_placeholder: "New password"
         password_confirmation_placeholder: "Repeat the new password"
         change_password: "Change my password"
         back_login: "Back to login"
+        error_token:
+          text: "<b>The request token is invalid.</b><br />Please, fill the form for request a password change again."
+          button_text: "Request a new password"
     email:
       password:
         instructions: "Hello %{name}!<br /><br />The reason of this e-mail is that someone has requested a password change for your account (without log into your account).<br /><br />If you are the person who requested it, click in the link below to continue:<br ><br /><div style='text-align:center; font-size:14px'>%{link}</div><br />If you didn't request this, please ignore this email. Your password won't change until you access the link above and create a new one."
