Added Users controller and some page functionality.
ADD: Users controller
It will deal with listing, view, create, modify and destroy users.
It also has a fancy sidebar. All translated (what is implemented).

ADD: User listing
Added to navbar link. It allows to view a list of registered users
by privilege level (or not).

ADD: Kaminari gem
Allows to do paging in MongoID results. Adjusted to 20 elements per
page. Added also a kaminari-bootstrap gem to use Bootstrap-like CSS.

ADD: Privilege level check functions
Added to Application controller to being available to all the
controllers in the app.

--- a/config/locales/users/en.yml
+++ b/config/locales/users/en.yml
@@ -1,5 +1,17 @@
 en:
   users:
+    index:
+      title: "User management"
+      subtitle:
+        all: "Listing all users"
+        administrator: "Listing administrator users"
+        normal: "Listing normal users"
+        guest: "Listing guest users"
+    sidebar:
+      all_users: "All users"
+      administrator_users: "Administrator users"
+      normal_users: "Normal users"
+      guest_users: "Guest users"
     email:
       welcome:
         subject: "Welcome to Watchr"
