--- a/config/locales/ui/en.yml
+++ b/config/locales/ui/en.yml
@@ -14,7 +14,13 @@ en:
       user:
         preferences: "Preferences"
         log_out: "Log out"
-  # Kaminari stuff
+    table:
+      search_placeholder: "Search..."
+      no_element: "Nothing to show here (yet)"
+      no_result: "Nothing matches your criteria."
+      showing_all: "Showing all %{entry_name}."
+      showing_results: "Showing %{entry_name} matching <b>'%{query}'</b>"
+  # Kaminari stuff (pagination)
   views:
     pagination:
       first: "&laquo; First"
@@ -26,8 +32,8 @@ en:
     page_entries_info:
       one_page:
         display_entries:
-          zero: "No %{entry_name} found"
-          one: "Displaying <b>1</b> %{entry_name}"
-          other: "Displaying <b>all %{count}</b> %{entry_name}"
+          zero: "No %{entry_name} found."
+          one: "Displaying <b>1</b> %{entry_name}."
+          other: "Displaying <b>all %{count}</b> %{entry_name}."
       more_pages:
-        display_entries: "Displaying %{entry_name} <b>%{first}&nbsp;-&nbsp;%{last}</b> of <b>%{total}</b> in total"
+        display_entries: "Displaying %{entry_name} <b>%{first}&nbsp;-&nbsp;%{last}</b> of <b>%{total}</b> in total."
