--- a/config/locales/users/en.yml
+++ b/config/locales/users/en.yml
@@ -1,12 +1,40 @@
 en:
+  mongoid:
+    models:
+      user:
+        one: "user"
+        other: "users"
   users:
+    levels:
+      level_0: "Administrator"
+      level_1: "Normal"
+      level_2: "Guest"
     index:
       title: "User management"
       subtitle:
-        all: "Listing all users"
+        all: "viewing all users"
         administrator: "Listing administrator users"
         normal: "Listing normal users"
         guest: "Listing guest users"
+      button_new: "Create a user"
+    new:
+      title: "Create a new user"
+      subtitle: "user details"
+      continue: "Create the user"
+      back: "Back to the list"
+    form:
+      email: "E-mail"
+      email_placeholder: "E-mail"
+      password: "Password"
+      password_generated: "Auto-generated and sent by e-mail."
+      password_unchanged: "Password remain unchanged."
+      privilege_level: "Privilege level"
+      name: "Name"
+      name_placeholder: "Name"
+      gravatar_email: "Gravatar e-mail"
+      gravatar_email_placeholder: "Gravatar e-mail"
+      gravatar_email_helper: "Leave blank if you want to use the user e-mail."
+      language: "Language"
     sidebar:
       all_users: "All users"
       administrator_users: "Administrator users"
