--- a/config/locales/users/en.yml
+++ b/config/locales/users/en.yml
@@ -58,3 +58,10 @@ en:
         body: "Welcome %{name}!<br /><br />Your account of Watchr has been created succesfully. Now you can log in the application using this credentials:<br /><ul><li><b>E-mail:</b> %{email}</li><li><b>Password:</b> %{password}</li><li><b>Login URL:</b> <a href='%{login_url}' alt='Login URL' title='Login URL'>%{login_url}</a></li></ul><br />We recommend you to check your account settings, so you can change whatever you like (avatar, password, language, etc).<br /><br />If you've any trouble, feel free to contact with the IT staff."
     error:
       not_found: "The user with the requested ID doesn't exist."
+      name_invalid: "The name is invalid, length must be between 2 and 30 characters."
+      email_invalid: "The e-mail is invalid. Please, check it and try again."
+      gravatar_email_invalid: "The e-mail for Gravatar's avatar is invalid. Please, check it and try again."
+      level_invalid: "The level selected isn't a valid privilege level. Please, check it and try again."
+      lan_invalid: "The language selected isn't available. Please, check it and try again."
+      password_invalid: "The length of the password must be between 8 and 128 characters."
+      password_repeat_invalid: "The passwords you've written aren't the same."
