Added Edit and Update actions for User
ADD: Edit and Update actions for User
It allows to an administrator to make changes in user's data by
modifying a simple form.

--- a/config/locales/users/en.yml
+++ b/config/locales/users/en.yml
@@ -28,7 +28,9 @@ en:
       continue: "Create the user"
       back: "Back to the list"
     show:
-      title: "View user"
+      title: "View an user"
+    edit:
+      title: "Edit an user"
     form:
       avatar: "Avatar"
       email: "E-mail"
