Added documentation and StrongParameters based on action
MODIFY: Strong parameters on UsersControllers
Now it only allos the parameter :change_password in update actions,
so it cannot be mass-assigned in creation process.

ADD: Documentation
And so on.

--- a/config/locales/users/en.yml
+++ b/config/locales/users/en.yml
@@ -61,7 +61,7 @@ en:
         body: "Welcome %{name}!<br /><br />Your account of Watchr has been created succesfully. Now you can log in the application using this credentials:<br /><ul><li><b>E-mail:</b> %{email}</li><li><b>Password:</b> %{password}</li><li><b>Login URL:</b> <a href='%{login_url}' alt='Login URL' title='Login URL'>%{login_url}</a></li></ul><br />We recommend you to check your account settings, so you can change whatever you like (avatar, password, language, etc).<br /><br />If you've any trouble, feel free to contact with the IT staff."
       change_password:
         subject: "Watchr - Password changed succesfully"
-        body: "Hello %{name}!<br /><br />The password of your account on Watchr has been changed by a member of our staff. Your credentials now are:<br /><ul><li><b>E-mail:</b> %{email}</li><li><b>Password:</b> %{password}</li></ul><br />We recommend you to change your password to make it more easy to remember.<br /><br /><b>Note:</b> this password was automatically generated, and no one except you have seen it, so your account remains secure."
+        body: "Hello %{name}!<br /><br />The password of your account on Watchr has been changed by a member of our staff. Your credentials now are:<br /><ul><li><b>E-mail:</b> %{email}</li><li><b>Password:</b> %{password}</li></ul><br />We recommend you to change your password to make it more easy to remember.<br /><br /><b>Security note:</b> this password was automatically generated, and no one except you have seen it, so your account remains secure."
     notice:
       created: "User (%{email}) <b>created succesfully</b>."
       updated: "User (%{email}) <b>updated succesfully</b>."
