Added Preferences view, and changed the sidebars
ADD: Preferences view
Using multiple panes and forms. Also added translations to all the
texts.

MODIFY: Users' sidebar
Added an external box, and changed the column sizes

MODIFY: Some visual bugs
Fixed problems when the users list is showed in a small device.
Also, added a class='active' to the Users element in the navbar
when the UsersController is being used.

--- a/config/locales/ui/en.yml
+++ b/config/locales/ui/en.yml
@@ -15,6 +15,7 @@ en:
         preferences: "Preferences"
         log_out: "Log out"
     table:
+      search_placeholder: "Search"
       search_placeholder: "Search..."
       no_element: "Nothing to show here (yet)"
       no_result: "Nothing matches your criteria."
