--- a/config/locales/users/en.yml
+++ b/config/locales/users/en.yml
@@ -36,6 +36,7 @@ en:
       title: "Preferences"
       subtitle_general: "change your account"
       subtitle_password: "change your password"
+      continue: "Save changes"
       sidebar:
         general: "General settings"
         change_password: "Change password"
@@ -60,8 +61,8 @@ en:
       current_password: "Current password"
       current_password_helper: "Your current password is needed to verify your identity."
       new_password: "New password"
-      repeat_password: "Repeat your password"
-      repeat_password_helper: "Repeat your new password to avoid typing mistakes."
+      password_confirmation: "Repeat your password"
+      password_confirmation_helper: "Repeat your new password to avoid typing mistakes."
     sidebar:
       all_users: "All users"
       administrator_users: "Administrator users"
@@ -78,6 +79,8 @@ en:
       created: "User (%{email}) <b>created succesfully</b>."
       updated: "User (%{email}) <b>updated succesfully</b>."
       destroyed: "User (%{email}) <b>destroyed violently</b>."
+      password_updated: "Password <b>updated succesfully</b>"
+      preferences_updated: "Preferences <b>updated succesfully</b>."
     error:
       not_found: "The user with the requested ID doesn't exist."
       name_invalid: "The name is invalid, length must be between 2 and 30 characters."
@@ -86,5 +89,6 @@ en:
       level_invalid: "The level selected isn't a valid privilege level. Please, check it and try again."
       lan_invalid: "The language selected isn't available. Please, check it and try again."
       password_invalid: "The length of the password must be between 8 and 128 characters."
-      password_repeat_invalid: "The passwords you've written aren't the same."
+      password_confirmation_invalid: "The passwords you've written aren't the same."
+      current_password_invalid: "The current password is incorrect."
       not_destroyed: "User (%{email}) couldn't be destroyed. Please, try again."
