Added some protections against auto-deleting administrators.
MODIFY: UsersControllers actions and views
Now, if an administrator user tries to destroy it's own account,
the system doesn't allow him and shows an error message. Also,
the delete buttons in his own account are disabled (in index and
show views).

Users can't change now it's privilege level. If an administrator
is going to be a less-privileged user, another administrartor
must downgrade hiss privilege level.

--- a/config/locales/users/en.yml
+++ b/config/locales/users/en.yml
@@ -48,6 +48,7 @@ en:
       password_generated: "New password auto-generated (user notified by e-mail)."
       password_unchanged: "Password remain unchanged."
       privilege_level: "Privilege level"
+      privilege_level_yourself: "You can't change your own privilege level."
       name: "Name"
       name_placeholder: "Name"
       gravatar_email: "Gravatar e-mail"
@@ -92,3 +93,4 @@ en:
       password_confirmation_invalid: "The passwords you've written aren't the same."
       current_password_invalid: "The current password is incorrect."
       not_destroyed: "User (%{email}) couldn't be destroyed. Please, try again."
+      destroy_yourself: "<b>You can't destroy your own user.</b>"
