Added Host model and some other changes
ADD: Host model
Added Host model to store and validate information about hosts.
It has 5 different types of hosts and is able to convert addreses
to IPs using the system DNS client.

MODIFY: User model
Modified the privilege level constants to use the convention.

ADD: Translations for MonitoringController
Added a file of translations to include the sidebar's ones.

--- a/config/locales/monitoring/en.yml
+++ b/config/locales/monitoring/en.yml
@@ -2,3 +2,8 @@ en:
   monitoring:
     index:
       title: "Monitoring"
+    sidebar:
+      monitoring: "Monitoring"
+      hosts: "Hosts management"
+      services: "Services management"
+      alerts: "Alerts management"
