Added HostsController and an index method
ADD: HostsController
Added to manage the actions of index, view, create, update and
destroy hosts in the application database.

ADD: HostsController#index action
Used to show the hosts in the database. Also has per-type filtering
and searching in names, descriptions and addreses of hosts.
Includes pagination.

ADD: Custom sidebar for HostsController
Added a custom sidebar to include filtering options of HostsController#index

REMOVE: Some SASS file unused

MODIFY: Routes to include HostsController functionality

--- a/config/locales/users/en.yml
+++ b/config/locales/users/en.yml
@@ -13,15 +13,18 @@ en:
       title: "User management"
       subtitle:
         all: "viewing all users"
-        administrator: "Listing administrator users"
-        normal: "Listing normal users"
-        guest: "Listing guest users"
+        administrator: "viewing administrator users"
+        normal: "viewing normal users"
+        guest: "viewing guest users"
       button:
         new: "Create a user"
         show: "View"
         edit: "Edit"
         destroy: "Destroy"
         destroy_confirmation: "Do you really want to destroy this user?"
+      table:
+        name: "Name"
+        email: "E-mail"
     new:
       title: "Create a new user"
       subtitle: "user details"
@@ -66,6 +69,7 @@ en:
       password_confirmation_helper: "Repeat your new password to avoid typing mistakes."
     sidebar:
       all_users: "All users"
+      view_privilege_level: "View by privilege level"
       administrator_users: "Administrator users"
       normal_users: "Normal users"
       guest_users: "Guest users"
