Added complete Service model and modified the host types
ADD: Complete Service model
Finished the Service model with the validations and functions needed
to check resume types, priorites, probes, etc.

MODIFY: Host types
Modified the host types in Host model to became symbols, in orden
to be more readable. This isn't extended to other parameters in
other models where the cardinality of the numbers means an specific
order (like in services priorities, when the lowest number indicates
the highest priority).

--- a/config/locales/hosts/en.yml
+++ b/config/locales/hosts/en.yml
@@ -6,11 +6,11 @@ en:
         other: "hosts"
   hosts:
     types:
-      type_0: "Router host"
-      type_1: "Switch host"
-      type_2: "Server host"
-      type_3: "Computer host"
-      type_4: "Generic host"
+      type_router: "Router host"
+      type_switch: "Switch host"
+      type_server: "Server host"
+      type_computer: "Computer host"
+      type_generic: "Generic host"
     index:
       title: "Hosts management"
       subtitle:
