Added probe configuration interface.
ADD: Probe configuration interface.
The probe configuration interfaces are generated by the probes themselves
and are isnerted in the creation/edition form, and refreshed when
the user changes the probe selection field.

Also, methods to check if the configuration is valid has been implemented
and the system is now able to check the probe's config and warn the
user if something is wrong

ADD: Protection against uninstalled probes.
If a service has assigned an uninstalled probe, an error is shown
in the index table and in the show view of the service.

--- a/config/locales/services/en.yml
+++ b/config/locales/services/en.yml
@@ -30,6 +30,7 @@ en:
       table:
         name: "Name"
         probe: "Probe"
+        error: "Error"
     new:
       title: "Create a new service"
       subtitle: "service details"
@@ -53,6 +54,7 @@ en:
       description_placeholder: "(Optional) Description of the service"
       priority: "Priority"
       probe: "Probe"
+      probe_not_found: "The probe selected isn't available."
       interval: "Interval"
       interval_placeholder: "Testing interval"
       interval_helper: "The time between tests of the service."
@@ -70,6 +72,7 @@ en:
       not_destroyed: "Host (%{name}) couldn't be destroyed. Please, try again."
       name_invalid: "The name is invalid, length must be between 2 and 30 characters."
       probe_invalid: "The probe selected is invalid or isn't available at the moment."
+      probe_config_invalid: "The probe configuration is invalid. Check it and try again."
       interval_invalid: "The interval is invalid, must be 1 second or grater."
       clean_interval_invalid: "The clean interval is invalid, must be 1 second or grater."
       priority_invalid: "The priority selected isn't a valid one."
