Added checks on host assignation to service
ADD: Checks on host-service management
Added a filter to control the existence of hosts before the assign
of hosts to service. When index_hosts, new_host and delete_host actions
are called, if no host exists the user is redirected back and an
error message is shown.

Also, added privilege level checks to the new actions.

MODIFY: Host and service show views
Added a list of services and hosts assigned to both of them.

MODIFY: Configuration sidebar and navbar link.
Now the services management is more important than hosts management.

--- a/config/locales/hosts/en.yml
+++ b/config/locales/hosts/en.yml
@@ -58,6 +58,7 @@ en:
       description: "Description"
       description_placeholder: "Description of the host"
       description_helper: "Optional field. Use it to add more details about the host."
+      services: "Services assigned"
       created_at: "Created at"
       updated_at: "Updated at"
     notice:
