Added activation status for hosts and services.
ADD: Activation status
Added activation status for Host and Service model, that allows
to deactivate temporaly the tests of a determined host or service.

Also, added a inactivity text in the index view for both models
to allow to view directly which objects are inactive.

--- a/config/locales/hosts/en.yml
+++ b/config/locales/hosts/en.yml
@@ -51,13 +51,16 @@ en:
     form:
       name: "Name"
       name_placeholder: "Name of the host"
+      description: "Description"
+      description_placeholder: "Description of the host"
+      description_helper: "Optional field. Use it to add more details about the host."
       address: "Address"
       address_placeholder: "IP address or domain of the host"
       address_helper: "Domains will be resolved to IP address automatically."
       type: "Host type"
-      description: "Description"
-      description_placeholder: "Description of the host"
-      description_helper: "Optional field. Use it to add more details about the host."
+      activation: "Status"
+      active: "Active"
+      inactive: "Inactive"
       services: "Services assigned"
       created_at: "Created at"
       updated_at: "Updated at"
@@ -68,6 +71,7 @@ en:
     error:
       not_found: "The host with the requested ID doesn't exist."
       name_invalid: "The name is invalid, length must be between 2 and 30 characters."
+      active_invalid: "The activation status is invalid. Check it and try again."
       address_invalid: "The address is invalid or cannot be resolved. Please, check it and try again."
       address_repeated: "The address is being used in another host. Try another one."
       type_invalid: "The host type selected isn't a valid one. Please, check it and try again."
