--- a/config/locales/services/en.yml
+++ b/config/locales/services/en.yml
@@ -63,6 +63,9 @@ en:
       name_placeholder: "Name of the service"
       description: "Description"
       description_placeholder: "(Optional) Description of the service"
+      activation: "Status"
+      active: "Active"
+      inactive: "Inactive"
       priority: "Priority"
       probe: "Probe"
       probe_not_found: "The probe selected isn't available."
@@ -90,6 +93,7 @@ en:
       host_not_deleted: "Host (%{name}) <b>couldn't be deleted</b> from service (%{service})."
       not_destroyed: "Host (%{name}) couldn't be destroyed. Please, try again."
       name_invalid: "The name is invalid, length must be between 2 and 30 characters."
+      active_invalid: "The activation status is invalid. Check it and try again."
       probe_invalid: "The probe selected is invalid or isn't available at the moment."
       probe_config_invalid: "The probe configuration is invalid. Check it and try again."
       interval_invalid: "The interval is invalid, must be 1 second or grater."
